--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.project</groupId>
 	<artifactId>faro-API</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>faro-API</name>
 	<description>Sistema de gestión de eventos</description>
 	<properties>
