--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
 ###Config para MySQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/EM_20220928?useSSL=false
+#spring.datasource.url=jdbc:mysql://34.176.71.88:3306/faro_21052024?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=ariel.2580_faro_21052024
 spring.datasource.url=jdbc:mysql://localhost/faro_20240212?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
